# clawbio_bench

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  ROADMAP.md  clawbio_audit_report_20260406.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: audit-baseline.yml  audit-reusable.yml  ci.yml  daily-audit.yml
baselines/: latest_baseline.json
baselines/log/: state.json
baselines/log/daily/: 2026-04-07.md  2026-04-08.md  2026-04-09.md  2026-04-10.md  2026-04-11.md  2026-04-12.md  2026-04-13.md  2026-04-14.md  2026-04-15.md  2026-04-16.md  2026-04-17.md  2026-04-18.md  2026-04-19.md  2026-04-20.md  2026-04-21.md  2026-04-22.md  2026-04-23.md  2026-04-24.md  2026-04-25.md  2026-04-26.md  2026-04-27.md  2026-04-28.md  2026-04-29.md  2026-04-30.md  2026-05-01.md  2026-05-02.md  2026-05-03.md  2026-05-04.md  2026-05-05.md  2026-05-06.md  2026-05-07.md  2026-05-08.md
baselines/log/monthly/: 2026-04.md
baselines/log/weekly/: 2026-W16.md  2026-W17.md  2026-W18.md  2026-W19.md
docs/: baseline-schema.md  ground-truth-derivation.md  methodology.md
docs/harnesses/: finemapping.md
docs/plans/: CVR_PHASE2_PRD.md  GAP_ANALYSIS_2026-04-04.md  YAML_MIGRATION_PLAN.md
schemas/: README.md  verdict-full.schema.json  verdict-minimal.schema.json
scripts/: derive_finemapping_ground_truth.py  gen_schemas.py  generate_report.py  guard_ground_truth.py  post_summary.py  update_baseline.py
scripts/_reference/: gentropy_susie_inf.py
src/clawbio_bench/: __init__.py  __main__.py  cli.py  core.py  markdown_report.py  schemas.py  ui.py  viz.py
src/clawbio_bench/drivers/: finemapping_driver.py
src/clawbio_bench/harnesses/: __init__.py  cvr_correctness_harness.py  (+9 more)
tests/: conftest.py  test_chain_of_custody.py  test_cli_exit_codes.py  test_equity_scoring.py  test_ground_truth_parser.py  test_input_validation.py  test_markdown_report.py  test_nutrigx_scoring.py  test_orchestrator_scoring.py  test_pharmgx_scoring.py  test_reproducibility.py  test_reviewer_regressions.py  test_schemas.py  test_smoke_suite.py  test_tagged_commits_and_heatmap.py  test_verdict_format.py  test_yaml_frontmatter.py
(+249 files in other folders)
