[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "clawbio-bench"
version = "1.0.0"
description = "SOTA benchmark harnesses for auditing open-source computational biology tools"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "Sergey A. Kornilov", email = "biostochastics@users.noreply.github.com"},
    {name = "ClawBio Audit Team"},
]
keywords = [
    "bioinformatics", "benchmark", "audit", "pharmacogenomics",
    "population-genetics", "metagenomics", "safety",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "License :: OSI Approved :: MIT License",
    "Typing :: Typed",
]

[project.urls]
Homepage = "https://github.com/biostochastics/clawbio_benchmark"
Repository = "https://github.com/biostochastics/clawbio_benchmark"
Issues = "https://github.com/biostochastics/clawbio_benchmark/issues"

[project.optional-dependencies]
viz = ["matplotlib>=3.8"]
dev = ["pytest>=8.0", "ruff>=0.4", "pre-commit>=3.7"]

[project.scripts]
clawbio-bench = "clawbio_bench.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
clawbio_bench = ["test_cases/**/*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "smoke: Quick CI gate running against HEAD only",
    "longitudinal: Full commit sweep (slow)",
    "benchmark: All benchmark suite tests",
]

[tool.ruff]
target-version = "py311"
line-length = 99

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM"]
ignore = [
    "E501",    # line too long (handled by formatter)
    "SIM102",  # nested ifs in scoring engines improve readability of multi-condition branches
]

[tool.ruff.format]
quote-style = "double"
